--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+src-dir = "src"
 
 [project]
 name = "heavylight"
@@ -15,6 +17,12 @@ requires-python = ">=3.8"
 
 dependencies = [
     "pandas>=1.2",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest==7.4.3",
+    "pytest-cov",
 ]
 
 classifiers = [
